updating manifest to freshservice placeholders

--- a/yext_ai_search_freshdesk-main 11/Yext AI Search/manifest.json
+++ b/yext_ai_search_freshdesk-main 11/Yext AI Search/manifest.json
@@ -1,17 +1,13 @@
 {
   "platform-version": "2.2",
   "product": {
-    "freshdesk": {
+    "freshservice": {
       "location": {
-        "ticket_conversation_editor": {
-          "url": "index.html",
-          "icon": "styles/images/Yext_Seal_Black.svg"
-        },
         "full_page_app": {
           "url": "index.html",
           "icon": "styles/images/Yext_Seal_White.svg"
         },
-        "cti_global_sidebar": {
+        "ticket_top_navigation": {
           "url": "index.html",
           "icon": "styles/images/Yext_Seal_White.svg"
         }
